--- a/popup/stylesheet.css
+++ b/popup/stylesheet.css
@@ -1,5 +1,22 @@
 body{
-	height: 100px;
-	width: 100px;
-	background-color: blue;
+	height: 500px;
+	width: 350px;
+	background-color: #363434;
+}
+
+#header{
+	width: 100%;
+	height: 40px;
+	background-color: #62929A;
+}
+
+.button{
+	float: right;
+
+}
+
+#main{
+	width: 100%;
+	height: 100%;
+	background-color: #363434;
 }
