--- a/popup/stylesheet.css
+++ b/popup/stylesheet.css
@@ -1,7 +1,7 @@
 body{
 	height: 600px;
 	width: 400px;
-	background-color: #363434;
+	background-color: #222831;
 	overflow-x: hidden;
 }
 
@@ -14,6 +14,9 @@ body{
 
 #main{
 	padding-top: 40px;
+	width: 100%;
+	height: 100%;
+	background-color: #222831;
 }
 
 .headerDivs{
@@ -57,6 +60,10 @@ body{
 
 }
 
+.deleteImgs{
+	cursor: pointer;	
+}
+
 .divs{
 	background-color: #393e46;
 	border: 1px solid #222831;
@@ -64,12 +71,6 @@ body{
 	font-size: 16px;
 	padding-left: 5px;
 	line-height: 25px;      
-}
-
-#main{
-	width: 100%;
-	height: 100%;
-	background-color: #222831;
 }
 
 .nameDiv{
@@ -83,6 +84,7 @@ body{
 	height: 25px;
 	float: left;
 	border-bottom: 2px solid #222831;
+	/*#222831*/
 }
 .curVerDiv{
 	width: 175px;
@@ -95,7 +97,7 @@ body{
 	height: 50px;
 	float: right;
 	line-height: 50px;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	font-size: 0;
 	list-style: none;
 	text-align: left;
@@ -239,50 +241,47 @@ body{
 	40% { opacity: 1; } 
 }
 
- /* The snackbar - position it at the bottom and in the middle of the screen */
 #snackbar {
-    visibility: hidden; /* Hidden by default. Visible on click */
-    min-width: 250px; /* Set a default minimum width */
-    margin-left: -125px; /* Divide value of min-width by 2 */
-    background-color: #333; /* Black background color */
-    color: #fff; /* White text color */
-    text-align: center; /* Centered text */
-    border-radius: 2px; /* Rounded borders */
-    padding: 16px; /* Padding */
-    position: fixed; /* Sit on top of the screen */
-    z-index: 1; /* Add a z-index if needed */
-    left: 50%; /* Center the snackbar */
-    bottom: 30px; /* 30px from the bottom */
+    visibility: hidden; 
+    min-width: 250px;
+    height: 50px; 
+    margin-left: -125px; 
+    background-color: #14181d; 
+    color: #fff; 
+    text-align: center; 
+    border-radius: 2px; 
+    padding: 16px; 
+    position: fixed; 
+    z-index: 1; 
+    left: 50%; 
+    bottom: 30px; 
+    font-size: 16px;
 }
 
-/* Show the snackbar when clicking on a button (class added with JavaScript) */
 #snackbar.show {
-    visibility: visible; /* Show the snackbar */
-    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
-   However, delay the fade out process for 2.5 seconds */
+    visibility: visible; 
    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
    animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
-/* Animations to fade the snackbar in and out */
 @-webkit-keyframes fadein {
-    from {bottom: 0; opacity: 0;}
-    to {bottom: 30px; opacity: 1;}
+    from {top: 550px; opacity: 0;}
+    to {top: 52550px0px; opacity: 1;}
 }
 
 @keyframes fadein {
-    from {bottom: 0; opacity: 0;}
-    to {bottom: 30px; opacity: 1;}
+    from {top: 550px; opacity: 0;}
+    to {top: 520px; opacity: 1;}top
 }
 
 @-webkit-keyframes fadeout {
-    from {bottom: 30px; opacity: 1;}
-    to {bottom: 0; opacity: 0;}
+    from {top: 520px; opacity: 1;}
+    to {top: 550px; opacity: 0;}
 }
 
 @keyframes fadeout {
-    from {bottom: 30px; opacity: 1;}
-    to {bottom: 0; opacity: 0;}
+    from {top: 520px; opacity: 1;}
+    to {top: 550px; opacity: 0;}
 } 
 
 .goodImgs{
