--- a/popup/stylesheet.css
+++ b/popup/stylesheet.css
@@ -55,6 +55,16 @@ body{
 	height: 100%;
 }
 
+#inputField{
+	width: 90%;
+	height: 80%;
+	background-color: white;
+	border: 2px solid #393e46;
+	color: #393e46;
+	font-size: 16px;
+	padding-left: 5px;
+}
+
 .button{
 	float: right;
 
