--- a/popup/stylesheet.css
+++ b/popup/stylesheet.css
@@ -2,7 +2,7 @@ body{
 	height: 600px;
 	width: 400px;
 	background-color: #222831;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 #header{
@@ -17,6 +17,8 @@ body{
 	width: 100%;
 	height: 100%;
 	background-color: #222831;
+	overflow: auto;
+	overflow-x: hidden;
 }
 
 .headerDivs{
@@ -85,25 +87,26 @@ body{
 
 .nameDiv{
 	width: 350px;
+	width: 87.5%;
 	height: 25px;
 	float: left;
 	cursor: pointer;
 }
 .insVerDiv{
-	width: 175px;
+	width: 43.75%;
 	height: 25px;
 	float: left;
 	border-bottom: 2px solid #222831;
 	/*#222831*/
 }
 .curVerDiv{
-	width: 175px;
+	width: 43.75%;
 	height: 25px;
 	float: left;
 	border-bottom: 2px solid #222831;
 }
 .imgDiv{
-	width: 50px;
+	width: 12.5%;
 	height: 50px;
 	float: right;
 	line-height: 50px;
@@ -254,7 +257,8 @@ body{
 #snackbar {
     visibility: hidden; 
     min-width: 250px;
-    height: 50px; 
+    max-width: 250px;
+    min-height: 50px; 
     margin-left: -125px; 
     background-color: #14181d; 
     color: #fff; 
