--- a/popup/stylesheet.css
+++ b/popup/stylesheet.css
@@ -1,370 +1,734 @@
-* {
-	box-sizing: inherit;
+*{
+	box-sizing: border-box;
 }
 
 body{
 	height: 560px;
 	width: 400px;
-	background-color: #222831;
+	background-color: #fff;
 	overflow: hidden;
-	box-sizing: border-box;
+	/*background-color: #fff;*/
 }
 
-#header{
-	width: 100%;
+img{
+	margin: 0;
+}
+
+p{
+	margin: 0;
+}
+
+
+.header{
+	background-color: #3f72af;
 	height: 40px;
-	background-color: #00adb5;
-	position: fixed;
 }
 
 #main{
-	padding-top: 40px;
+	height: 480px;
 	width: 100%;
-	height: 100%;
-	background-color: #222831;
-	overflow: auto;
+	background-color: #fff;
+	overflow-y: auto;
 	overflow-x: hidden;
 }
 
-.headerDivs{
+.footer{
+	height: 40px;
+	background-color: #3f72af;
+	width: 100%;
+}
+
+.footer_buttons{
 	float: left;
-	display: inline-block;
+	width: 50%;
+	height: 40px;
+	color: white;
 	line-height: 40px;
+	font-size: 18px;
 	text-align: center;
 }
 
-.headerButtons:hover{
-	cursor: pointer;
-	background-color: #00cdd7;
-}
-
-#headerLeft{
-	width: 250px;
-	height: 100%;
-}
-
-#editDiv{
-	width: 50px;
-	height: 100%;
-}
-
-#refreshDiv{
-	width: 50px;
-	height: 100%;
-}
-
-.headerImg{
-    vertical-align: middle;
-}
-
-#addDiv{
-	width: 50px;
-	height: 100%;
-}
-
-#inputField{
-	width: 90%;
-	height: 80%;
-	background-color: white;
-	border: 2px solid #393e46;
-	color: #393e46;
-	font-size: 16px;
-	padding-left: 5px;
-}
-
-.button{
-	float: right;
-
-}
-
-.deleteImgs{
+.footer_buttons:hover{
+	background-color: #658ebf;
 	cursor: pointer;	
 }
 
-.updateImg{
-	cursor: pointer;
+#forum_button{
+	border-right: 2px solid #fff;
+	text-decoration: underline;
 }
 
-.divs{
-	background-color: #393e46;
-	border: 1px solid #222831;
+#search_image_container{
+	float: left;
+	width: 30px;
+	height: 30px;
+	background-color: #2c4f7a;
+	border-top-left-radius: 3px;
+	border-bottom-left-radius: 3px;
+	text-align: center;
+	margin-top: 5px; 
+}
+
+#search_box_container{
+	float: left;
+	margin-top: 5px;
+}
+
+#search_box{
+	background-color: #2c4f7a;
+	border: none;
+	height: 30px;
+	width: 170px;
+	border-top-right-radius: 3px;
+	border-bottom-right-radius: 3px;
 	color: white;
 	font-size: 16px;
-	padding-left: 5px;
-	line-height: 25px;      
 }
 
-.nameDiv{
-	width: 87.5%;
-	height: 25px;
-	float: left;
-	cursor: pointer;
-}
-
-.insVerDiv{
-	width: 43.75%;
-	height: 25px;
-	float: left;
-	border-bottom: 2px solid #222831;
-	/*#222831*/
-}
-.curVerDiv{
-	width: 43.75%;
-	height: 25px;
-	float: left;
-	border-bottom: 2px solid #222831;
-}
-.imgDiv{
-	width: 12.5%;
-	height: 50px;
-	float: right;
-	line-height: 50px;
-	/*overflow: hidden;*/
-	font-size: 0;
-	list-style: none;
-	text-align: left;
-	box-sizing: border-box;
-	border-bottom: 2px solid #222831;
-}
-
-.sk-fading-circle {
-	margin: 0 auto;
-	width: calc(100% - 5%);
-	height: calc(100% - 5%);
-	position: relative;
-}
-
-.sk-fading-circle .sk-circle {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	left: calc(-7.5%);
-	top: 0;
-}
-
-.sk-fading-circle .sk-circle:before {
-	content: '';
-	display: block;
-	margin: 0 auto;
-	width: 15%;
-	height: 15%;
-	background-color: white;
-	border-radius: 100%;
-	-webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
-					animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
-}
-.sk-fading-circle .sk-circle2 {
-	-webkit-transform: rotate(30deg);
-		-ms-transform: rotate(30deg);
-			transform: rotate(30deg);
-}
-.sk-fading-circle .sk-circle3 {
-	-webkit-transform: rotate(60deg);
-		-ms-transform: rotate(60deg);
-			transform: rotate(60deg);
-}
-.sk-fading-circle .sk-circle4 {
-	-webkit-transform: rotate(90deg);
-		-ms-transform: rotate(90deg);
-			transform: rotate(90deg);
-}
-.sk-fading-circle .sk-circle5 {
-	-webkit-transform: rotate(120deg);
-		-ms-transform: rotate(120deg);
-			transform: rotate(120deg);
-}
-.sk-fading-circle .sk-circle6 {
-	-webkit-transform: rotate(150deg);
-		-ms-transform: rotate(150deg);
-			transform: rotate(150deg);
-}
-.sk-fading-circle .sk-circle7 {
-	-webkit-transform: rotate(180deg);
-		-ms-transform: rotate(180deg);
-			transform: rotate(180deg);
-}
-.sk-fading-circle .sk-circle8 {
-	-webkit-transform: rotate(210deg);
-		-ms-transform: rotate(210deg);
-			transform: rotate(210deg);
-}
-.sk-fading-circle .sk-circle9 {
-	-webkit-transform: rotate(240deg);
-		-ms-transform: rotate(240deg);
-			transform: rotate(240deg);
-}
-.sk-fading-circle .sk-circle10 {
-	-webkit-transform: rotate(270deg);
-		-ms-transform: rotate(270deg);
-			transform: rotate(270deg);
-}
-.sk-fading-circle .sk-circle11 {
-	-webkit-transform: rotate(300deg);
-		-ms-transform: rotate(300deg);
-			transform: rotate(300deg); 
-}
-.sk-fading-circle .sk-circle12 {
-	-webkit-transform: rotate(330deg);
-		-ms-transform: rotate(330deg);
-			transform: rotate(330deg); 
-}
-.sk-fading-circle .sk-circle2:before {
-	-webkit-animation-delay: -1.1s;
-			animation-delay: -1.1s; 
-}
-.sk-fading-circle .sk-circle3:before {
-	-webkit-animation-delay: -1s;
-			animation-delay: -1s; 
-}
-.sk-fading-circle .sk-circle4:before {
-	-webkit-animation-delay: -0.9s;
-			animation-delay: -0.9s; 
-}
-.sk-fading-circle .sk-circle5:before {
-	-webkit-animation-delay: -0.8s;
-			animation-delay: -0.8s; 
-}
-.sk-fading-circle .sk-circle6:before {
-	-webkit-animation-delay: -0.7s;
-			animation-delay: -0.7s; 
-}
-.sk-fading-circle .sk-circle7:before {
-	-webkit-animation-delay: -0.6s;
-			animation-delay: -0.6s; 
-}
-.sk-fading-circle .sk-circle8:before {
-	-webkit-animation-delay: -0.5s;
-			animation-delay: -0.5s; 
-}
-.sk-fading-circle .sk-circle9:before {
-	-webkit-animation-delay: -0.4s;
-			animation-delay: -0.4s;
-}
-.sk-fading-circle .sk-circle10:before {
-	-webkit-animation-delay: -0.3s;
-			animation-delay: -0.3s;
-}
-.sk-fading-circle .sk-circle11:before {
-	-webkit-animation-delay: -0.2s;
-			animation-delay: -0.2s;
-}
-.sk-fading-circle .sk-circle12:before {
-	-webkit-animation-delay: -0.1s;
-			animation-delay: -0.1s;
-}
-
-@-webkit-keyframes sk-circleFadeDelay {
-	0%, 39%, 100% { opacity: 0; }
-	40% { opacity: 1; }
-}
-
-@keyframes sk-circleFadeDelay {
-	0%, 39%, 100% { opacity: 0; }
-	40% { opacity: 1; } 
-}
-
-#snackbar {
-    visibility: hidden; 
-    min-width: 250px;
-    max-width: 250px;
-    min-height: 50px; 
-    margin-left: -125px; 
-    background-color: #14181d; 
-    color: #fff; 
-    text-align: center; 
-    border-radius: 2px; 
-    padding: 16px; 
-    position: fixed; 
-    z-index: 1; 
-    left: 50%; 
-    bottom: 30px; 
-    font-size: 16px;
-}
-
-#snackbar.show {
-    visibility: visible; 
-   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-   animation: fadein 0.5s, fadeout 0.5s 2.5s;
-}
-
-@-webkit-keyframes fadein {
-    from {top: 550px; opacity: 0;}
-    to {top: 52550px0px; opacity: 1;}
-}
-
-@keyframes fadein {
-    from {top: 550px; opacity: 0;}
-    to {top: 520px; opacity: 1;}
-}
-
-@-webkit-keyframes fadeout {
-    from {top: 520px; opacity: 1;}
-    to {top: 550px; opacity: 0;}
-}
-
-@keyframes fadeout {
-    from {top: 520px; opacity: 1;}
-    to {top: 550px; opacity: 0;}
-} 
-
-.goodImgs{
-	height: 100%;
-	float: right;
+.helper {
+    display: inline-block;
+    height: 100%;
 	vertical-align: middle;
 }
 
-.errorImg{
-	height: 100%;
-	float: right;
-	vertical-align: middle;	
+#search_image{
+	vertical-align: middle;
 }
 
-.updateImg{
-	height: 100%;
-	float: right;
-	vertical-align: middle;	
+#search_container{
+	width: 210px;
+	height: 40px;
+	padding-left: 10px;
+	float: left;
+}
+
+.header_items{
+	width: 95px;
+	height: 40px;
+	float: left;
+	/*text-align: center;*/
+	background-color: #3f72af;
+	text-align: center;
+}
+
+.header_items:hover{
+	background-color: #658ebf;
 	cursor: pointer;
 }
 
-.spinner {
-  margin: 100px auto 0;
-  width: 70px;
-  text-align: center;
+.header_images{
+	vertical-align: middle;
+	display: inline-block;
+    margin: 0 auto;
 }
 
-.spinner > div {
-  width: 22px;
-  height: 22px;
-  background-color: white;
-  margin-top: 20px;
-
-  border-radius: 100%;
-  display: inline-block;
-  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+span{
+	margin: 0;
 }
 
-.spinner .bounce1 {
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
+.plugin_container{
+	height: 60px;
+	width: 100%;
+	background-color: white;
 }
 
-.spinner .bounce2 {
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
+.add_overlay {
+	background-color: #fff;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	overflow: hidden;
+	transition: all 1s;
 }
 
-@-webkit-keyframes sk-bouncedelay {
-  0%, 80%, 100% { -webkit-transform: scale(0) }
-  40% { -webkit-transform: scale(1.0) }
+.add_overlay.closed {
+	top: 100%;
+	height: 0;
 }
 
-@keyframes sk-bouncedelay {
-  0%, 80%, 100% { 
-    -webkit-transform: scale(0);
-    transform: scale(0);
-  } 40% { 
-    -webkit-transform: scale(1.0);
-    transform: scale(1.0);
+.overlay_header_buttons{
+	height: 100%;
+	width: 80px;
+	line-height: 40px;
+}
+
+#overlay_button_right_container{
+	height: 100%;
+	width: 80px;
+	background-color: #3f72af;
+	float: left;
+}
+
+#overlay_button_left_container{
+	height: 100%;
+	width: 80px;
+	background-color: #3f72af;
+	float: left;
+}
+
+#headline_container{
+	height: 100%;
+	width: 240px;
+	float: left;
+	line-height: 40px;
+}
+
+#headline_container:hover{
+	cursor: default;
+}
+
+.header_text{
+	text-align: center;
+	vertical-align: middle;
+	color: white;
+	font-size: 16px;
+	top: 0;
+	margin: 0;
+}
+
+#headline{
+	font-weight: bold;
+	font-size: 20px;
+}
+
+.overlay_containers{
+	width: 100%;
+	height: 60px;
+	padding-top: 10px;
+	position: relative;
+	background-color: #fff;
+}
+
+.overlay_containers_hover:hover{
+	/*background-color: #f9fff7;*/
+	background-color: #e8edeb;
+}
+.overlay_containers:hover .overlay_input_box_hover{
+	background-color: #e8edeb;
+	/*background-color: #f9fff7;*/
+}
+
+.overlay_input_box{
+	background-color: #fff;
+	color: #2c4f7a;
+	margin-left: 10px;
+	width: 380px;
+	height: 25px;
+	font-size: 18px;
+	position: absolute;
+	bottom: 0;
+	border: none;
+	border-bottom: 1px solid #e0dede;
+}
+
+
+
+.overlay_notes_box{
+	font-size: 18px;
+	margin-left: 10px;
+	margin-top: 5px;
+	border: 1px solid #e0dede;
+	padding: 10px; 
+	width: 380px;
+	height: 50px;
+	resize: vertical;
+	overflow: auto;
+	max-height: 180px;
+	min-height: 50px;
+	word-break: break-all;
+	color: #2c4f7a;
+}
+
+.notes_input_hover:hover{
+	background-color: #e8edeb;
+}
+
+.overlay_notes_box:hover{
+	cursor: text;
+}
+
+#notes_container{
+	height: 260px;
+	width: 100%;
+}
+
+.overlay_input_text{
+	font-size: 14px;
+	color: #636262;
+	margin-left: 10px;
+	/*color: #2c4f7a;*/
+}
+
+.loader_container{
+	text-align: center;
+	position: absolute;
+	top: 50%; left: 50%;
+	transform: translate(-50%,-50%);
+}
+
+.wrapper_all{
+	height: 60px;
+	width: 100%;
+	margin-bottom: 3px;
+	float: left;
+	background-color: #ddd;
+}
+
+.wrapper_left{
+	height: 60px;
+	/*width: 340px;*/
+	width: 85%;
+	float: left;
+	background-color: #ddd;
+}
+
+.wrapper_right{
+	height: 60px;
+	/*width: 60px;*/
+	width: 15%;
+	float: left;
+	background-color: #ddd;
+}
+
+.wrapper_topper{
+	height: 30px;
+	width: 100%;
+}
+
+.wrapper_footer{
+	height: 30px;
+	width: 100%;
+}
+
+.name_container{
+	/*width: 280px;*/
+	width: 81.56965%;
+	height: 30px;
+	border-bottom: 1px solid #fff;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	/*background-color: grey;*/
+}
+
+.info_button_container{
+	float: left;
+	/*width: 30px;*/
+	width: 9.21517%;
+	height: 30px;
+	border-bottom: 1px solid #fff;
+	text-align: center;
+	/*background-color: green;*/
+}
+
+.info_button_image{
+	height: 24px;
+	cursor: pointer;
+}
+
+.open_button_container{
+	float: left;
+	/*width: 30px;*/
+	width: 9.21517%;
+	height: 30px;
+	border-bottom: 1px solid #fff;
+	border-right: 1px solid #fff;
+	/*background-color: yellow;*/
+}
+
+.open_button_image{
+	height: 27px;
+	margin-top: 50px;
+	cursor: pointer;
+}
+
+.status_container{
+	/*width: 60px;*/
+	width: 100%;
+	height: 60px;
+	float: left;
+	background-color: #ddd;
+	color: #313848;
+	text-align: center;
+}
+.status_container_image{
+	vertical-align: middle;
+	height: 50px;
+}
+
+.installed_version_container{
+	height: 30px;
+	/*width: 170px;*/
+	width: 50%;
+	border-right: 1px solid #fff;
+	/*background-color: red;*/
+}
+
+.current_version_container{
+	height: 30px;
+	/*width: 170px;*/
+	width: 50%;
+	border-right: 1px solid #fff;
+}
+
+.update_version_image{
+	cursor: pointer;
+}
+
+/*for blinking when overlay not filled*/
+@keyframes blink { 
+   50% { border-color: #ff0000; } 
+}
+
+.plugin_info_container{
+	float: left;
+	background-color: #ddd;
+	color: #313848;
+	font-size: 18px;
+	padding-left: 5px;
+	padding-top: 5px;
+}
+
+.plugin_info_container_image{
+	/*height: 30px;*/
+	vertical-align: middle;
+	display: inline-block;
+    margin: 0 auto;
+}
+
+.overlay_header_buttons{
+	height: 100%;
+	width: 100%;
+	line-height: 40px;
+	text-align: center;
+	font-size: 18px;
+	cursor: pointer;
+	color: white;	
+}
+
+.overlay_header_buttons:hover{
+	background-color: #658ebf;	
+}
+
+#delete_entry_button{
+	height: 40px;
+	/*margin-top: 10px;*/
+	margin: 10px auto;
+	width: 100px;
+	background-color: #e84545;
+	text-align: center;
+	color: white;
+	font-size: 22px;
+	line-height: 40px;
+	border-radius: 4px;
+}
+
+#delete_entry_button:hover{
+	cursor: pointer;
+	background-color: #c81919;
+}
+
+.hide{
+	display: none;
+}
+
+
+
+
+
+
+/*roller for loading when filling overlay*/
+.lds_roller {
+	display: inline-block;
+	position: relative;
+	width: 64px;
+	height: 64px;
+	margin: 0 auto;
+}
+
+.lds_roller div {
+  animation: lds_roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 32px 32px;
+}
+.lds_roller div:after {
+	content: " ";
+	display: block;
+	position: absolute;
+	width: 6px;
+	height: 6px;
+	border-radius: 50%;
+	background: #3f72af;
+	margin: -3px 0 0 -3px;
+}
+.lds_roller div:nth-child(1) {
+	animation-delay: -0.036s;
+}
+.lds_roller div:nth-child(1):after {
+	top: 50px;
+	left: 50px;
+}
+.lds_roller div:nth-child(2) {
+	animation-delay: -0.072s;
+}
+.lds_roller div:nth-child(2):after {
+	top: 54px;
+	left: 45px;
+}
+.lds_roller div:nth-child(3) {
+	animation-delay: -0.108s;
+}
+.lds_roller div:nth-child(3):after {
+	top: 57px;
+	left: 39px;
+}
+.lds_roller div:nth-child(4) {
+	animation-delay: -0.144s;
+}
+.lds_roller div:nth-child(4):after {
+	top: 58px;
+	left: 32px;
+}
+.lds_roller div:nth-child(5) {
+	animation-delay: -0.18s;
+}
+.lds_roller div:nth-child(5):after {
+	top: 57px;
+	left: 25px;
+}
+.lds_roller div:nth-child(6) {
+	animation-delay: -0.216s;
+}
+.lds_roller div:nth-child(6):after {
+	top: 54px;
+	left: 19px;
+}
+.lds_roller div:nth-child(7) {
+	animation-delay: -0.252s;
+}
+.lds_roller div:nth-child(7):after {
+	top: 50px;
+	left: 14px;
+}
+.lds_roller div:nth-child(8) {
+	animation-delay: -0.288s;
+}
+.lds_roller div:nth-child(8):after {
+	top: 45px;
+	left: 10px;
+}
+@keyframes lds_roller {
+	0% {
+	transform: rotate(0deg);
+	}
+	100% {
+	transform: rotate(360deg);
+	}
+}
+
+
+/*loader for getting versions*/
+.lds-css{
+	margin: 0px;
+	height: 60px;
+	width: 60px;
+}
+
+.lds-spinner {
+  0% {
+    opacity: 1;
   }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.lds-spinner {
+	height: 100%;
+	width: 100%;
+  	position: relative;
+}
+.lds-spinner div {
+	left: 92px;
+	top: 12px;
+	position: absolute;
+	-webkit-animation: lds-spinner linear 1s infinite;
+	animation: lds-spinner linear 1s infinite;
+	background: #3f72af;
+	width: 16px;
+	height: 16px;
+	border-radius: 100%;
+	-webkit-transform-origin: 8px 88px;
+	  transform-origin: 8px 88px;
+}
+.lds-spinner div:nth-child(1) {
+	-webkit-transform: rotate(0deg);
+	transform: rotate(0deg);
+	-webkit-animation-delay: -0.933333333333333s;
+	animation-delay: -0.933333333333333s;
+}
+.lds-spinner div:nth-child(2) {
+	-webkit-transform: rotate(24deg);
+	transform: rotate(24deg);
+	-webkit-animation-delay: -0.866666666666667s;
+	animation-delay: -0.866666666666667s;
+}
+.lds-spinner div:nth-child(3) {
+	-webkit-transform: rotate(48deg);
+	transform: rotate(48deg);
+	-webkit-animation-delay: -0.8s;
+	animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(4) {
+	-webkit-transform: rotate(72deg);
+	transform: rotate(72deg);
+	-webkit-animation-delay: -0.733333333333333s;
+	animation-delay: -0.733333333333333s;
+}
+.lds-spinner div:nth-child(5) {
+	-webkit-transform: rotate(96deg);
+	transform: rotate(96deg);
+	-webkit-animation-delay: -0.666666666666667s;
+	animation-delay: -0.666666666666667s;
+}
+.lds-spinner div:nth-child(6) {
+	-webkit-transform: rotate(120deg);
+	transform: rotate(120deg);
+	-webkit-animation-delay: -0.6s;
+	animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+	-webkit-transform: rotate(144deg);
+	transform: rotate(144deg);
+	-webkit-animation-delay: -0.533333333333333s;
+	animation-delay: -0.533333333333333s;
+}
+.lds-spinner div:nth-child(8) {
+	-webkit-transform: rotate(168deg);
+	transform: rotate(168deg);
+	-webkit-animation-delay: -0.466666666666667s;
+	animation-delay: -0.466666666666667s;
+}
+.lds-spinner div:nth-child(9) {
+	-webkit-transform: rotate(192deg);
+	transform: rotate(192deg);
+	-webkit-animation-delay: -0.4s;
+	animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(10) {
+	-webkit-transform: rotate(216deg);
+	transform: rotate(216deg);
+	-webkit-animation-delay: -0.333333333333333s;
+	animation-delay: -0.333333333333333s;
+}
+.lds-spinner div:nth-child(11) {
+	-webkit-transform: rotate(240deg);
+	transform: rotate(240deg);
+	-webkit-animation-delay: -0.266666666666667s;
+	animation-delay: -0.266666666666667s;
+}
+.lds-spinner div:nth-child(12) {
+	-webkit-transform: rotate(264deg);
+	transform: rotate(264deg);
+	-webkit-animation-delay: -0.2s;
+	animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(13) {
+	-webkit-transform: rotate(288deg);
+	transform: rotate(288deg);
+	-webkit-animation-delay: -0.133333333333333s;
+	animation-delay: -0.133333333333333s;
+}
+.lds-spinner div:nth-child(14) {
+	-webkit-transform: rotate(312deg);
+	transform: rotate(312deg);
+	-webkit-animation-delay: -0.066666666666667s;
+	animation-delay: -0.066666666666667s;
+}
+.lds-spinner div:nth-child(15) {
+	-webkit-transform: rotate(336deg);
+	transform: rotate(336deg);
+	-webkit-animation-delay: 0s;
+	animation-delay: 0s;
+}
+.lds-spinner {
+	width: 60px !important;
+	height: 60px !important;
+	-webkit-transform: translate(-30px, -30px) scale(0.3) translate(30px, 30px);
+	transform: translate(-30px, -30px) scale(0.3) translate(30px, 30px);
+}
+
+#snackbar_text_container{
+	width: 320px;
+	height: 100%;
+	float: left;
+	line-height: 50px;
+	padding-left: 10px;
+}
+
+#snackbar_cross_container{
+	width: 30px;
+	height: 100%;
+	float: left;
+	text-align: center;
+}
+#cross_image{
+	vertical-align: middle;
+	display: inline-block;
+	margin: 0 auto;
+	cursor: pointer;
+}
+
+#snackbar {
+	visibility: hidden;
+	min-width: 350px;
+	height: 50px;
+	margin-left: -175px;
+	background-color: #3f72af;
+	color: white;
+	text-align: center;
+	border-radius: 2px;
+	position: fixed;
+	z-index: 1;
+	left: 50%;
+	bottom: 30px;
+	font-size: 18px;
+}
+
+#snackbar.show {
+	visibility: visible;
+	-webkit-animation: fadein 0.5s;
+	animation: fadein 0.5s;
+}
+
+#snackbar.remove {
+	-webkit-animation: fadeout 0.5s;
+	animation: fadeout 0.5s;	
+}
+
+@-webkit-keyframes fadein {
+	from {bottom: 0; opacity: 0;} 
+	to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+	from {bottom: 0; opacity: 0;}
+	to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+	from {bottom: 30px; opacity: 1;} 
+	to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+	from {bottom: 30px; opacity: 1;}
+	to {bottom: 0; opacity: 0;}
 }
